--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-    <h1>ToDo List</h1>
+    <h1><u>ToDo List</u></h1>
+
+    <h2>Incompleted Items</h2>
+    <div id="incompleteItems"></div>
+    <h2>Completed Items</h2>
+    <div id="completeItems"></div>
 
     <label for="title">Title</label>
     <input type="text" id="title">
